--- a/src/main/resources/templates/missions/missions.html
+++ b/src/main/resources/templates/missions/missions.html
@@ -13,6 +13,7 @@
                     <div class="col pt-4">
                         <h1 class="py-2">Missions</h1>
                         <a class="btn btn-primary" th:href="@{/missions/new}">Ajouter une mission</a>
+                        <a class="btn btn-secondary" th:href="@{/mission-types}">Types de mission</a>
                         <hr />
 
                         <div class="card">
