--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,28 +11,26 @@
                     <div class="col pt-4">
                         <h1 class="py-2">Accueil</h1>
                         <hr />
-                        <div class="table-responsive">
-                            <table id="allMissions" class="table table-striped">
-                                <thead>
-                                <tr>
-                                    <th>uuid</th>
-                                    <th>Nom</th>
-                                    <th>Type</th>
-                                    <th>Statut</th>
-                                    <th>Date de début</th>
-                                    <th>Date de fin</th>
-                                </tr>
-                                <tr th:each="m:${missions}">
-                                    <td th:text="${m.uuid}"></td>
-                                    <td th:text="${m.name}"></td>
-                                    <td th:text="${m.missionType}"></td>
-                                    <td th:text="${m.status}"></td>
-                                    <td th:text="${#temporals.format(m.startingDate, 'dd.MM.yyyy HH:mm')}"></td>
-                                    <td th:text="${#temporals.format(m.endingDate, 'dd.MM.yyyy HH:mm')}"></td>
-                                </tr>
-                                </thead>
-                            </table>
-                        </div>
+                        <table id="allMissions" class="table table-responsive table-striped">
+                            <thead>
+                            <tr>
+                                <th>uuid</th>
+                                <th>Nom</th>
+                                <th>Type</th>
+                                <th>Statut</th>
+                                <th>Date de début</th>
+                                <th>Date de fin</th>
+                            </tr>
+                            <tr th:each="m:${missions}">
+                                <td th:text="${m.uuid}"></td>
+                                <td th:text="${m.name}"></td>
+                                <td th:text="${m.missionType}"></td>
+                                <td th:text="${m.status}"></td>
+                                <td th:text="${#temporals.format(m.startingDate, 'dd.MM.yyyy HH:mm')}"></td>
+                                <td th:text="${#temporals.format(m.endingDate, 'dd.MM.yyyy HH:mm')}"></td>
+                            </tr>
+                            </thead>
+                        </table>
                     </div>
                 </main>
                 <div th:replace="~{fragments/footer :: footer}"></div>
