--- a/src/main/resources/templates/missions/create_mission.html
+++ b/src/main/resources/templates/missions/create_mission.html
@@ -25,8 +25,10 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="missionType" class="col-form-label">Type de Mission :</label>
-                            <input th:field="*{missionType}" type="text" id="missionType" class="form-control" required="required">
+                            <label for="missionType" class="col-form-label">Type de mission :</label>
+                            <select th:field="*{missionType}" id="missionType" name="missionType" required="required">
+                                <option th:each="type : ${missionTypes}" th:value="${type}" th:text="${type}"></option>
+                            </select>
                         </div>
 
                         <div class="form-group">
