--- a/src/main/resources/templates/missions/edit_mission.html
+++ b/src/main/resources/templates/missions/edit_mission.html
@@ -15,6 +15,7 @@
     <div class="row">
         <div class="card col-lg-6 col-md-6 justify-content-center container py-4">
             <div class="card-header">
+                <a class="btn btn-secondary" th:href="@{/missions}">Retour</a>
                 <h1>Mise à jour</h1>
             </div>
             <div class="card-body">
