--- a/src/main/resources/templates/missions/create_mission.html
+++ b/src/main/resources/templates/missions/create_mission.html
@@ -10,7 +10,7 @@
                     <h1>Nouvelle mission</h1>
                 </div>
                 <div class="card-body">
-                    <form th:action="@{/missions}" method="post" id="newMissionForm" th:object="${newMissionDTO}">
+                    <form th:action="@{/missions}" method="post" id="newMissionForm" th:object="${mission}">
                         <div class="form-group">
                             <label for="name" class="col-form-label">Nom de la Mission :</label>
                             <input th:field="*{name}" type="text" id="name" class="form-control" required="required">
@@ -27,8 +27,8 @@
 
                         <div class="form-group">
                             <label for="missionType" class="col-form-label">Type de mission :</label>
-                            <select th:field="*{missionType}" id="missionType" name="missionType" required="required">
-                                <option th:each="type : ${missionTypes}" th:value="${type}" th:text="${type}"></option>
+                            <select class="form-select" th:field="*{missionType.name}" id="missionType" name="missionType" required="required">
+                                <option th:each="t : ${missionTypes}" th:value="${t}" th:text="${t.name}"></option>
                             </select>
                         </div>
 
