--- a/src/main/resources/templates/missions/create_mission.html
+++ b/src/main/resources/templates/missions/create_mission.html
@@ -27,8 +27,8 @@
 
                         <div class="form-group">
                             <label for="missionType" class="col-form-label">Type de mission :</label>
-                            <select class="form-select" th:field="*{missionType.name}" id="missionType" name="missionType" required="required">
-                                <option th:each="t : ${missionTypes}" th:value="${t}" th:text="${t.name}"></option>
+                            <select class="form-select" th:field="*{missionType.uuid}" id="missionType" name="missionType" required="required">
+                                <option th:each="t : ${missionTypes}" th:value="${t.uuid}" th:text="${t.name}"></option>
                             </select>
                         </div>
 
