--- a/src/main/resources/templates/missions/edit_mission.html
+++ b/src/main/resources/templates/missions/edit_mission.html
@@ -37,8 +37,8 @@
 
                     <div class="form-group">
                         <label for="missionType" class="col-form-label">Type de mission :</label>
-                        <select class="form-select" th:field="*{missionType}" id="missionType" name="missionType" required="required">
-                            <option th:each="type : ${missionTypes}" th:value="${type}" th:text="${type}"></option>
+                        <select class="form-select" th:field="*{missionType.uuid}" id="missionType" name="missionType" required="required">
+                            <option th:each="t : ${missionTypes}" th:value="${t.uuid}" th:text="${t.name}"></option>
                         </select>
                     </div>
 
