--- a/src/main/resources/templates/missions/edit_mission.html
+++ b/src/main/resources/templates/missions/edit_mission.html
@@ -21,6 +21,7 @@
             <div class="card-body">
                 <form th:action="@{/missions/update}" method="post" id="editMissionForm" th:object="${mission}">
                     <input type="hidden" name="uuid" id="uuid" th:field="*{uuid}">
+                    <input type="hidden" name="status" id="status" th:field="*{status}">
                     <div class="form-group">
                         <label for="name" class="col-form-label">Nom de la Mission :</label>
                         <input th:field="*{name}" type="text" id="name" class="form-control" required="required">
@@ -49,12 +50,13 @@
 
                     <div class="form-group">
                         <label for="startingDate" class="col-form-label">Date de Début:</label>
-                        <input th:field="*{startingDate}" type="datetime-local" id="startingDate" class="form-control">
+                        <input th:field="*{startingDate}" th:value="*{startingDate}" id="startingDate" name="startingDate" type="datetime-local" class="form-control">
+
                     </div>
 
                     <div class="form-group">
                         <label for="endingDate" class="col-form-label">Date de Fin:</label>
-                        <input th:field="*{endingDate}" type="datetime-local" id="endingDate" class="form-control">
+                        <input th:value="*{endingDate}" type="datetime-local" id="endingDate" name="endingDate" class="form-control">
                     </div>
                 </form>
             </div>
