--- a/src/main/resources/templates/missions/missions.html
+++ b/src/main/resources/templates/missions/missions.html
@@ -45,8 +45,8 @@
                                                 <td th:text="${m.name}"></td>
                                                 <td th:text="${m.missionType.name}"></td>
                                                 <td th:text="${m.status}"></td>
-                                                <td th:text="${#temporals.format(m.startingDate, 'dd.MM.yyyy HH:mm')}"></td>
-                                                <td th:text="${#temporals.format(m.endingDate, 'dd.MM.yyyy HH:mm')}"></td>
+                                                <td th:text="${#temporals.format(m.startingDate, 'dd/MM/yyyy HH:mm')}"></td>
+                                                <td th:text="${#temporals.format(m.endingDate, 'dd/MM/yyyy HH:mm')}"></td>
                                                 <td>
                                                     <!-- Editer -->
                                                     <a class="btn btn-primary btn-sm" th:href="@{/missions/edit/{id}(id=${m.uuid})}"><i class="bi bi-pencil-square"></i></a>
