--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,7 +24,7 @@
                             <tr th:each="m:${missions}">
                                 <td th:text="${m.uuid}"></td>
                                 <td th:text="${m.name}"></td>
-                                <td th:text="${m.missionType}"></td>
+                                <td th:text="${m.missionType.name}"></td>
                                 <td th:text="${m.status}"></td>
                                 <td th:text="${#temporals.format(m.startingDate, 'dd.MM.yyyy HH:mm')}"></td>
                                 <td th:text="${#temporals.format(m.endingDate, 'dd.MM.yyyy HH:mm')}"></td>
