--- a/src/main/resources/templates/volunteers/edit_volunteer.html
+++ b/src/main/resources/templates/volunteers/edit_volunteer.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="/webjars/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/webjars/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css">
-
-</head>
+<div th:replace="~{fragments/head :: head}"></div>
 <body>
 <div class="container">
     <div class="row">
