--- a/src/main/resources/templates/missions/create_mission.html
+++ b/src/main/resources/templates/missions/create_mission.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="card col-lg-6 col-md-6 justify-content-center container py-4">
                 <div class="card-header">
-                    <a class="btn btn-secondary" th:href="@{/missions}">Retour</a>
+                    <a class="btn btn-secondary pb-2" th:href="@{/missions}">Retour</a>
                     <h1>Nouvelle mission</h1>
                 </div>
                 <div class="card-body">
