--- a/src/main/resources/templates/missions/edit_mission.html
+++ b/src/main/resources/templates/missions/edit_mission.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="card col-lg-6 col-md-6 justify-content-center container py-4">
             <div class="card-header">
-                <a class="btn btn-secondary" th:href="@{/missions}">Retour</a>
+                <a class="btn btn-secondary pb-2" th:href="@{/missions}">Retour</a>
                 <h1>Mise à jour</h1>
             </div>
             <div class="card-body">
@@ -50,8 +50,7 @@
 
                     <div class="form-group">
                         <label for="startingDate" class="col-form-label">Date de Début:</label>
-                        <input th:field="*{startingDate}" th:value="*{startingDate}" id="startingDate" name="startingDate" type="datetime-local" class="form-control">
-
+                        <input th:value="*{startingDate}" id="startingDate" name="startingDate" type="datetime-local" class="form-control">
                     </div>
 
                     <div class="form-group">
