--- a/src/main/resources/templates/mission-types/mission-types.html
+++ b/src/main/resources/templates/mission-types/mission-types.html
@@ -4,24 +4,25 @@
 <body>
 
 
-
 <div class="container-fluid overflow-hidden">
     <div class="row vh-100 overflow-auto">
         <div th:replace="~{fragments/sidebar :: sidebar}"></div>
         <div class="col d-flex flex-column h-sm-100 col-sm-9">
             <main class="row overflow-auto">
                 <div class="col pt-4">
-                    <h1 class="py-2">Bénévoles</h1>
-                    <a class="btn btn-primary" th:href="@{/volunteers/create}">Ajouter un bénévole</a>
+                    <a class="btn btn-secondary" th:href="@{/}">Retour</a>
+                    <h1 class="py-2">Types de mission</h1>
                     <hr />
-
+                    <a class="btn btn-primary" th:href="@{/mission-types/create}">Ajouter un type</a>
+                    <hr />
                     <div class="card">
                         <div class="card-header">
-                            <form class="d-flex" role="search" id="search" th:action="@{/volunteers/search}">
+                            <form class="d-flex" role="search" id="search" th:action="@{/mission-types/search}">
                                 <input name="query" class="form-control-sm" type="text" placeholder="Rechercher" aria-label="Rechercher">
-                                <button type="submit" form="search" class="btn btn-outline-secondary btn-sm">
+                                <button type="submit" form="search" class="btn btn-secondary btn-sm mx-1">
                                     <i class="bi bi-search"></i>
                                 </button>
+                                <button type="submit" th:href="@{/mission-types}" class="btn btn-outline-secondary btn-sm"><i class="bi bi-arrow-counterclockwise"></i></button>
                             </form>
                         </div>
                         <div class="card-body">
@@ -29,49 +30,28 @@
                                 <table class="table table-striped table-hover">
                                     <thead>
                                     <tr>
+                                        <th>id</th>
                                         <th>uuid</th>
                                         <th>Nom</th>
-                                        <th>Prénom</th>
-                                        <th>Email</th>
-                                        <th>Téléphone</th>
+                                        <th>Description</th>
                                         <th>Actions</th>
                                     </tr>
                                     </thead>
                                     <tbody>
-                                        <tr th:each="v:${volunteers}">
-                                        <td th:text="${v.uuid}"></td>
-                                        <td th:text="${v.lastName}"></td>
-                                        <td th:text="${v.firstName}"></td>
-                                        <td th:text="${v.email}"></td>
-                                        <td th:text="${v.phoneNumber}"></td>
+                                    <tr th:each="m:${missionTypes}">
+                                        <td th:text="${m.id}"></td>
+                                        <td th:text="${m.uuid}"></td>
+                                        <td th:text="${m.name}"></td>
+                                        <td th:text="${m.description}"></td>
                                         <td>
                                             <!-- Editer -->
-                                            <a class="btn btn-primary btn-sm" th:href="@{/volunteers/edit/{id}(id=${v.id})}"><i class="bi bi-pencil-square"></i></a>
+                                            <a class="btn btn-primary btn-sm" th:href="@{/mission-types/edit/{id}(id=${m.id})}"><i class="bi bi-pencil-square"></i></a>
                                             <!-- Supprimer -->
-                                            <a class="btn btn-danger btn-sm" th:href="@{/volunteers/delete/{id}(id=${v.id})}"><i class="bi bi-trash"></i></a>
-                                            <!-- Voir -->
-                                            <a class="btn btn-info btn-sm" th:href="@{/volunteers/view/{id}(id=${v.id})}"><i class="bi bi-eye"></i></a>
+                                            <a class="btn btn-danger btn-sm" th:href="@{/mission-types/delete/{id}(id=${m.id})}"><i class="bi bi-trash"></i></a>
                                         </td>
-
-
-
-
-                                        <!--<td>
-                                            <button class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#showMissionModal" th:attrappend="data-bs-target=${m.uuid}"><i class="bi bi-eye"></i></button>
-                                            --><!-- Modal pour voir une mission --><!--
-                                        <div th:replace="fragments/viewMissionModal :: viewMissionModal"></div>
-
-                                        <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#editMissionModal"><i class="bi bi-pencil-square"></i></button>
-                                        --><!-- Modal pour éditer une mission --><!--
-
-
-                                        <button class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></button>
-                                    </td>-->
                                     </tr>
                                     </tbody>
-
                                 </table>
-
                             </div>
                         </div>
                         <div class="card-footer">
@@ -92,15 +72,10 @@
                         </div>
                     </div>
 
+
                 </div>
             </main>
             <div th:replace="~{fragments/footer :: footer}"></div>
         </div>
     </div>
 </div>
-
-
-<div th:replace="~{fragments/scripts :: scripts}"></div>
-
-</body>
-</html>
