--- a/src/main/resources/templates/missions/missions.html
+++ b/src/main/resources/templates/missions/missions.html
@@ -12,72 +12,23 @@
                 <main class="row overflow-auto">
                     <div class="col pt-4">
                         <h1 class="py-2">Missions</h1>
-                        <a class="btn btn-primary" th:href="@{/missions/new}">Ajouter une mission</a>
-                        <a class="btn btn-secondary" th:href="@{/mission-types}">Types de mission</a>
-                        <hr />
-
-                        <div class="card">
-                            <div class="card-header">
-                                <form class="d-flex" role="search" id="search" th:action="@{/missions/search}">
-                                    <input name="query" class="form-control-sm" type="text" placeholder="Rechercher" aria-label="Rechercher">
-                                    <button type="submit" form="search" class="btn btn-outline-secondary btn-sm">
-                                        <i class="bi bi-search"></i>
-                                    </button>
-                                </form>
-                            </div>
-                            <div class="card-body">
-                                <div class="table-responsive">
-                                    <table class="table table-striped table-hover">
-                                        <thead>
-                                        <tr>
-                                            <th>uuid</th>
-                                            <th>Nom</th>
-                                            <th>Type</th>
-                                            <th>Statut</th>
-                                            <th>Date de début</th>
-                                            <th>Date de fin</th>
-                                            <th>Actions</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr th:each="m:${listMissions}">
-                                                <td th:text="${m.uuid}"></td>
-                                                <td th:text="${m.name}"></td>
-                                                <td th:text="${m.missionType.name}"></td>
-                                                <td th:text="${m.status}"></td>
-                                                <td th:text="${#temporals.format(m.startingDate, 'dd/MM/yyyy HH:mm')}"></td>
-                                                <td th:text="${#temporals.format(m.endingDate, 'dd/MM/yyyy HH:mm')}"></td>
-                                                <td>
-                                                    <!-- Editer -->
-                                                    <a class="btn btn-primary btn-sm" th:href="@{/missions/edit/{id}(id=${m.uuid})}"><i class="bi bi-pencil-square"></i></a>
-                                                    <!-- Supprimer -->
-                                                    <a class="btn btn-danger btn-sm" th:href="@{/missions/delete/{id}(id=${m.uuid})}"><i class="bi bi-trash"></i></a>
-                                                    <!-- Voir -->
-                                                    <a class="btn btn-info btn-sm" th:href="@{/missions/view/{id}(id=${m.uuid})}"><i class="bi bi-eye"></i></a>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                                Pagination
-                                <!--<nav aria-label="Page navigation volunteer">
-                                    <ul class="pagination justify-content-center">
-                                        <li class="page-item">
-                                            <a class="page-link" th:href="@{/index(page=${previousPage})}">Previous</a>
-                                        </li>
-                                        <li class="page-item" th:class="${currentPage==status.index?'active':''}" th:each="page, status:${pages}">
-                                            <a class="page-link"  th:text="${status.index}" th:href="@{/index(page=${status.index},keyword=${keyword})}"></a>
-                                        </li>
-                                        <li class="page-item">
-                                            <a class="page-link" th:href="@{/index(page=${nextPage})}">Next</a>
-                                        </li>
-                                    </ul>
-                                </nav>-->
-                            </div>
+                        <hr/>
+                        <nav class="nav nav-pills flex-column flex-sm-row">
+                            <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page" data-bs-toggle="pill" href="#new">A planifier</a>
+                            <a class="flex-sm-fill text-sm-center nav-link" data-bs-toggle="pill" href="#planned">A confirmer</a>
+                            <a class="flex-sm-fill text-sm-center nav-link" data-bs-toggle="pill" href="#confirmed">Confirmées</a>
+                            <a class="flex-sm-fill text-sm-center nav-link" data-bs-toggle="pill" href="#ongoing">En cours</a>
+                            <a class="flex-sm-fill text-sm-center nav-link" data-bs-toggle="pill" href="#completed">Terminées</a>
+                            <a class="flex-sm-fill text-sm-center nav-link" data-bs-toggle="pill" href="#cancelled">Annulées</a>
+                        </nav>
+                        <div class="tab-content">
+                            <div th:replace="~{fragments/missions/new-missions :: new-missions}"></div>
+                            <div th:replace="~{fragments/missions/planned-missions :: planned-missions}"></div>
+                            <div th:replace="~{fragments/missions/confirmed-missions :: confirmed-missions}"></div>
+                            <div th:replace="~{fragments/missions/ongoing-missions :: ongoing-missions}"></div>
+                            <div th:replace="~{fragments/missions/completed-missions :: completed-missions}"></div>
+                            <div th:replace="~{fragments/missions/cancelled-missions :: cancelled-missions}"></div>
                         </div>
-
                     </div>
                 </main>
                 <div th:replace="~{fragments/footer :: footer}"></div>
