--- a/src/main/resources/templates/volunteers/volunteers.html
+++ b/src/main/resources/templates/volunteers/volunteers.html
@@ -29,21 +29,25 @@
                                 <table class="table table-striped table-hover">
                                     <thead>
                                     <tr>
+                                        <th>id</th>
                                         <th>uuid</th>
                                         <th>Nom</th>
                                         <th>Prénom</th>
                                         <th>Email</th>
                                         <th>Téléphone</th>
+                                        <th>Statut</th>
                                         <th>Actions</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                         <tr th:each="v:${volunteers}">
+                                        <td th:text="${v.id}"></td>
                                         <td th:text="${v.uuid}"></td>
                                         <td th:text="${v.lastName}"></td>
                                         <td th:text="${v.firstName}"></td>
                                         <td th:text="${v.email}"></td>
                                         <td th:text="${v.phoneNumber}"></td>
+                                        <td th:text="${v.status}"></td>
                                         <td>
                                             <!-- Editer -->
                                             <a class="btn btn-primary btn-sm" th:href="@{/volunteers/edit/{id}(id=${v.id})}"><i class="bi bi-pencil-square"></i></a>
